--- a/pixi.toml
+++ b/pixi.toml
@@ -9,7 +9,7 @@ version = "0.1.0"
 [tasks]
 
 [dependencies]
-max = ">=24.5.0,<25"
+max = ">=24.5.0a,<24.6"
 pytorch = ">=2.4.0,<3"
 numpy = "<2.0"
 onnx = "==1.16.0"
